solved bug fixes for event cards

--- a/views/layouts/home/sections/event-description.ejs
+++ b/views/layouts/home/sections/event-description.ejs
@@ -7,7 +7,7 @@
           <img class="absolute bottom-0 left-0 -ml-8 dots" src="/img/dots.svg" alt="dots">
           <div class="relative h-96 mr-6 rounded-lg shadow-md video-wrapper">
             <div class="video-image">
-              <img class="mx-auto rounded h-96 w-full" src="<%= foundEvent.event_pic %>" alt="video">
+              <img class="mx-auto rounded object-fit h-96 w-full" src="<%= foundEvent.event_pic %>" alt="video">
             </div>
           </div>
         </div>
