--- a/views/layouts/home/sections/event-sponsors.ejs
+++ b/views/layouts/home/sections/event-sponsors.ejs
@@ -14,7 +14,7 @@
             class="max-w-sm w-80 h-96 layered-card bg-white duration-200 border-2 rounded border-transparent hover:border-green-600">
             <div class="team-item p-3">
               <div class="team-img relative">
-                <img class="object-contain rounded"
+                <img class="object-fit rounded h-72 w-full"
                   src="<%= sponsor.pic %>"
                   alt="">
                 <div class="team-overlay">
