--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -493,7 +493,7 @@
         <div class="justify-center row z-50">
           <div class="w-full lg:w-2/3">
             <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
-              <img class="rounded-lg object-fit mx-auto" src="<%= foundEvent.event_poster %>" alt="hero">
+              <img class="rounded-lg object-fit h-96 w-full mx-auto" src="<%= foundEvent.event_poster %>" alt="hero">
             </div>
           </div>
         </div>
