--- a/views/layouts/dashboard/sections/header.ejs
+++ b/views/layouts/dashboard/sections/header.ejs
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="flex justify-end items-center h-14 bg-blue-800 dark:bg-gray-800 header-right">
-    <div class="flex justify-center mx-auto">
+    <div class="flex mt-16 justify-center mx-auto">
       <span id="login-notify" class="text-md bg-gray-900 <%= error.length === 1 ? " py-1 px-2 mb-2" : " " %>
         rounded
         font-semibold text-red-500">
