--- a/views/layouts/home/partials/head-links.ejs
+++ b/views/layouts/home/partials/head-links.ejs
@@ -19,7 +19,7 @@
 
 <link href="/css/tingle.css" rel="stylesheet">
 
-<link href="/css/styles.css" rel="stylesheet">
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/tingle.min.css">
 
