--- a/views/layouts/home/sections/testimonials.ejs
+++ b/views/layouts/home/sections/testimonials.ejs
@@ -9,7 +9,7 @@
         </div>
       </div>
     </div>
-    <div class="row testimonial-active wow fadeInUpBig" data-wow-duration="1s" data-wow-delay="0.8s">
+    <div class="row testimonial-active">
       <div class="border-2 px-5 h-full py-10 rounded-lg hover:shadow-lg mb-5 border-transparent duration-200 mx-2">
         <div class="">
           <div class="flex items-center justify-between mb-6">
