--- a/views/layouts/auth/partials/links.ejs
+++ b/views/layouts/auth/partials/links.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/custom.css">
 
 <!-- TailWind CSS Styles -->
-<link rel="stylesheet" href="/css/styles.css">
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 <!-- JQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
