--- a/views/layouts/home/department_page.ejs
+++ b/views/layouts/home/department_page.ejs
@@ -108,7 +108,7 @@
       
   
                   // add button
-                  modal.addFooterBtn('close', 'tingle-btn tingle-btn--dange tingle-btn--pull-right', function() {
+                  modal.addFooterBtn('close', 'tingle-btn tingle-btn--danger tingle-btn--pull-right', function() {
                       // here goes some logic
                       modal.close();
                   });
