--- a/views/layouts/home/home-new.ejs
+++ b/views/layouts/home/home-new.ejs
@@ -17,7 +17,7 @@
   <%- include("./sections/vision.ejs") %>
 
   <!-- Departments Section (Top 3) -->
-  <%- include("./sections/top3-department.ejs") %> 
+  <!-- include("./sections/top3-department.ejs") %>  -->
 
    <!-- Brand section -->
    <%- include("./sections/brands.ejs") %>
