--- a/views/layouts/home/sections/all-departments.ejs
+++ b/views/layouts/home/sections/all-departments.ejs
@@ -1,5 +1,5 @@
 <!-- Department Heading -->
-<div class="m-auto flex flex-col justify-center section-title mt-32 text-center wow fadeIn" data-wow-duration="1s"
+<div id="allDepartments" class="m-auto flex flex-col justify-center section-title mt-32 text-center wow fadeIn" data-wow-duration="1s"
   data-wow-delay="0.5s">
   <div class="m-auto line"></div>
   <h1 class="text-4xl font-bold text-black">Our Departments</h1>
@@ -23,7 +23,7 @@
           <div class="flex justify-center items-center">
             <a href="/departments/<%= dept.name %>"
               class="inline w-1/2 text-lg text-white text-center duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2 my-5  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-              data-scroll-nav="0" href="#" rel="nofollow">Visit Department</a>
+              data-scroll-nav="0" href="#" rel="nofollow">Explore</a>
           </div>
         </div>
       </div>
