--- a/views/layouts/home/sections/features.ejs
+++ b/views/layouts/home/sections/features.ejs
@@ -23,7 +23,7 @@
             <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
               tempor
               invidunt labore.</p>
-            <a class="duration-300 hover:text-purple-600" href="javascript:void(0)">Learn More <i
+            <a class="duration-300 hover:text-purple-600" href="/events">Learn More <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
         </div>
@@ -36,11 +36,11 @@
             <i class="lni lni-text-align-center text-white text-4xl"></i>
           </div>
           <div class="mt-8 services-content">
-            <h4 class="mb-8 text-xl font-bold text-gray-900">Content</h4>
+            <h4 class="mb-8 text-xl font-bold text-gray-900">Departments</h4>
             <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
               tempor
               invidunt labore.</p>
-            <a class="duration-300 hover:text-red-600" href="javascript:void(0)">Learn More <i
+            <a class="duration-300 hover:text-red-600" href="/departments">Explore <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
         </div>
@@ -53,11 +53,11 @@
             <i class="lni lni-consulting text-white text-4xl"></i>
           </div>
           <div class="mt-8 services-content">
-            <h4 class="mb-8 text-xl font-bold text-gray-900">Guidance</h4>
+            <h4 class="mb-8 text-xl font-bold text-gray-900">Staff Dashboard</h4>
             <p class="mb-8">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
               tempor
               invidunt labore.</p>
-            <a class="duration-300 hover:text-blue-600" href="javascript:void(0)">Learn More <i
+            <a class="duration-300 hover:text-blue-600" href="/dashboard">Visit <i
                 class="ml-2 lni lni-chevron-right"></i></a>
           </div>
         </div>
