--- a/views/layouts/home/sections/footer-links.ejs
+++ b/views/layouts/home/sections/footer-links.ejs
@@ -5,20 +5,20 @@
         <a class="inline-block mb-8 logo" href="/">
           <span class="text-white text-4xl font-bold">E-Cell</span>
         </a>
-        <p class="pb-10 pr-10 leading-snug text-white">Lorem ipsum dolor sit amet consetetur
-          sadipscing elitr,
-          sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+        <p class="pb-10 pr-10 leading-snug text-white">The Entrepreneurship Cell (E-Cell) is a non-profit organization 
+          run by students of GNDEC, Ludhiana. We create awareness among the students about Entrepreneurship through 
+          our various programs like workshops, speaker session and other such events.</p>
         <ul class="flex">
-          <li><a href="javascript:void(0)"><i
+          <li><a href="https://www.facebook.com/E-Cell-GNDEC-100549411816777/" target="_blank"><i
                 class="lni lni-facebook-filled mr-10 transform hover:-translate-y-1 text-white hover:text-black duration-200 text-2xl"></i></a>
           </li>
-          <li><a href="javascript:void(0)"><i
+          <!-- <li><a href="javascript:void(0)"><i
                 class="lni lni-twitter-filled mr-10 transform hover:-translate-y-1 text-white hover:text-black duration-200 text-2xl"></i></a>
-          </li>
-          <li><a href="javascript:void(0)"><i
+          </li> -->
+          <li><a href="https://www.instagram.com/ecell.gndec/" target="_blank"><i
                 class="lni lni-instagram-filled mr-10 transform hover:-translate-y-1 text-white hover:text-black duration-200 text-2xl"></i></a>
           </li>
-          <li><a href="javascript:void(0)"><i
+          <li><a href="https://www.linkedin.com/company/ecellgndec/" target="_blank"><i
                 class="lni lni-linkedin-original transform hover:-translate-y-1 text-white hover:text-black duration-200 text-2xl"></i></a>
           </li>
         </ul>
@@ -62,13 +62,13 @@
                 <a href="/events">Events</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
-                <a href="javascript:void(0)">Testimonials</a>
+                <a href="/">Testimonials</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">FAQ</a>
               </li>
               <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
-                  href="javascript:void(0)">Contact</a></li>
+                  href="/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -80,12 +80,12 @@
           <h4 class="mb-8 text-2xl font-bold text-white">Contact Us</h4>
         </div>
         <ul class="contact">
-          <li class="cursor-pointer mb-3 hover:text-red-400 hover:-translate-x-1 transform  duration-200">
+          <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform  duration-200">
             +91
             7529856345</li>
-          <li class="cursor-pointer mb-3 hover:text-red-400 hover:-translate-x-1 transform  duration-200">
+          <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform  duration-200">
             konarklohat123456@gmail.com</li>
-          <li class="cursor-pointer hover:text-red-400 hover:-translate-x-1 transform  duration-200">
+          <li class="hover:text-red-400 hover:-translate-x-1 transform  duration-200">
             Gill Park,
             Gill Road, Ludhiana,<br> Punjab 141006.</li>
         </ul>
