--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -818,7 +818,7 @@ p {
   width: 2px;
   height: 100%;
   margin-left: -1px;
-  background: rgb(213, 213, 213);
+  background: rgb(213, 213, 213);z
   background: -moz-linear-gradient(
     top,
     rgba(213, 213, 213, 0) 0%,
@@ -1081,42 +1081,5 @@ p {
     float: right;
     text-align: left;
   }
-}
-
-.dashboard_forms{
-	max-width:500px;
-	padding:30px;
-	margin:40px auto;
-	background:lightgray;
-	border-radius: 10px;
-	-webkit-border-radius:10px;
-	-moz-border-radius: 10px;
-	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.13);
-	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
-	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
-}
-.dashboard_forms .inner-wrap{
-	padding: 30px;
-	background:white;
-	border-radius: 6px;
-	margin-bottom: 15px;
-}
-.dashboard_forms .section{
-	font: normal 20px 'Bitter', serif;
-	color: #2A88AD;
-	margin-bottom: 5px;
-}
-.dashboard_forms .section span {
-	background: #2A88AD;
-	padding: 5px 10px 5px 10px;
-	position: absolute;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border: 4px solid #fff;
-	font-size: 14px;
-	margin-left: -45px;
-	color: #fff;
-	margin-top: -3px;
 }
 
