--- a/views/layouts/home/sections/home-about-us.ejs
+++ b/views/layouts/home/sections/home-about-us.ejs
@@ -14,9 +14,9 @@
             ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             Lorem ipsum
             dolor sit amet, consetetur sadipscing.</p>
-          <a href="javascript:void(0)"
+          <!-- <a href="javascript:void(0)"
             class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-3  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500">Know
-            More</a>
+            More</a> -->
         </div>
       </div>
       <div class="w-full lg:w-1/2">
