--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -1,4 +1,4 @@
-<div class="container px-4 md:px-0 max-w-6xl mx-auto mt-20 z-50">			
+<div id ="team" class="container px-4 md:px-0 max-w-6xl mx-auto mt-20 z-50">			
     <div class="mx-0 sm:mx-6">
         <div class=" w-full text-xl md:text-2xl text-gray-800 leading-normal rounded-lg">
             
@@ -129,7 +129,7 @@
 
             <!-- Ekam -->
             <!-- 1/3 col -->
-            <div class="w-full h-auto md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink cursor-pointer">
+            <div class="w-full md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink cursor-pointer">
                 <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
                     <a class="flex flex-wrap no-underline hover:no-underline">
                         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFxpUoIjucTmQ/profile-displayphoto-shrink_800_800/0/1627454797451?e=1632960000&v=beta&t=GuGRpaTPqL4V2TMQd4w-Nqx2kd9bLQnH3v0l_57ff8o" class="h-72 w-full rounded-t pb-6">
