--- a/views/layouts/home/sections/vision.ejs
+++ b/views/layouts/home/sections/vision.ejs
@@ -16,10 +16,10 @@
         Officiis obcaecati necessitatibus eos repellendus amet eius asperiores quibusdam dignissimos rem, fugit non eum distinctio perferendis! Incidunt quas quis eaque temporibus voluptatibus suscipit eveniet debitis porro ullam omnis, vitae cupiditate? 
         <% } %> 
       </p>
-      <div class="flex ml-7 pt-8 justify-center">
+      <!-- <div class="flex ml-7 pt-8 justify-center">
         <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
          href="#" rel="nofollow">Join Us!</a>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
