final bug fixes part 1

--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -38,7 +38,7 @@
         <div class="flex flex-wrap justify-between py-6 -mx-6 mb-12">
 
 <!-- Team Heads -->
-            <div class="w-full flex justify-center font-bold items-center text-4xl font-bold mt-12">Team Heads</div>
+            <div class="w-full flex justify-center items-center text-4xl font-bold mt-12">Team Heads</div>
             <!-- Lokesh Dhingra -->
             <!--1/3 col -->
             <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink rounded cursor-pointer">
@@ -108,7 +108,7 @@
 
 
 <!-- Active Members -->
-            <div class="w-full flex justify-center font-bold items-center text-4xl font-bold mt-20">Active Team Members</div>
+            <div class="w-full flex justify-center  items-center text-4xl font-bold mt-20">Active Team Members</div>
             
             <!-- Kumar Abhinav -->
             <div class="w-full md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink cursor-pointer">
@@ -207,8 +207,8 @@
                 <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
                     <a class="flex flex-wrap no-underline hover:no-underline">
                         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGMrnq1pDFHuA/profile-displayphoto-shrink_800_800/0/1627484852369?e=1632960000&v=beta&t=QJf9IAgwv9_h86LD9zBX8FYIUoiVk6xwqBKgw3V6PAY" class="h-72 w-full rounded-lg pb-6">
-                        <p class="uppercase w-full text-center text-black text-center text-lg md:text-md px-6">Sejal Madan</p>
-                        <div class="w-full font-bold text-center text-xl text-center text-gray-600 px-6">Front End Team</div>
+                        <p class="uppercase w-full  text-black text-center text-lg md:text-md px-6">Sejal Madan</p>
+                        <div class="w-full font-bold  text-xl text-center text-gray-600 px-6">Front End Team</div>
                     </a>
                 </div>
                 <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
