--- a/views/layouts/home/sections/home-about-us.ejs
+++ b/views/layouts/home/sections/home-about-us.ejs
@@ -1,4 +1,4 @@
-<section id="about" class="relative pt-5 xl:pt-20 2xl:pt-48 about-area">
+<section id="about" class="relative pt-24 lg:pt-10 xl:pt-20 2xl:pt-48 about-area">
   <div class="container">
     <div class="row items-center">
       <div class="w-full lg:w-1/2">
