--- a/views/layouts/home/sections/internship-form.ejs
+++ b/views/layouts/home/sections/internship-form.ejs
@@ -19,7 +19,7 @@
             class="w-full relative py-4 pl-2 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
             <!-- preferred department -->
             <!-- <label class="relative mt-10">Choose Preferred Department</label> -->
-            <div class="relative flex flex-col md:flex-row sm:flex-row select-dept">
+            <div class="relative flex flex-row select-dept">
               
               <!-- <svg class="w-full h-2 absolute top-0 right-0 m-4 pointer-events-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200"><path d="M206 171.144L42.678 7.822c-9.763-9.763-25.592-9.763-35.355 0-9.763 9.764-9.763 25.592 0 35.355l181 181c4.88 4.882 11.279 7.323 17.677 7.323s12.796-2.441 17.678-7.322l181-181c9.763-9.764 9.763-25.592 0-35.355-9.763-9.763-25.592-9.763-35.355 0L206 171.144z" fill="#648299" fill-rule="nonzero"/></svg> -->
               <select class="w-full mt-2 mr-2 border border-gray-300 rounded text-gray-600 h-10 pl-3 pr-8 bg-white hover:border-red-400 focus:outline-none" name="preferred-dept">
