credit page heading and tagline added

--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -409,14 +409,12 @@
               <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
                 <h3 class="text-3xl font-light leading-tight text-white header-sub-title wow fadeInUp"
                   data-wow-duration="1.3s" data-wow-delay="0.2s">
-                  Our Team
+                  Welcome to our Team Section
                 </h3>
                 <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
-                  data-wow-delay="0.5s">Welcome to our Team Section</h2>
+                  data-wow-delay="0.5s">Techie Whiz</h2>
                 <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                  "Don't let the
-                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                  <br>- Steve Jobs
+                  "If you can dream it, We can design it"
                 </p>
                 <a href="#team"
                   class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
